--- a/PM-Movies/src/app/thumbnail-board/thumbnail-board.component.html
+++ b/PM-Movies/src/app/thumbnail-board/thumbnail-board.component.html
@@ -1,3 +1,7 @@
+<div class="filtersPan d-flex align-items-center">
+  <p>Filters</p>
+</div>
+
 <div class="card-deck">
   <div *ngFor="let content of contents">
     <app-content-thumbnail [content]="content"></app-content-thumbnail>
