--- a/PM-Movies/src/app/header/header.component.scss
+++ b/PM-Movies/src/app/header/header.component.scss
@@ -4,6 +4,8 @@ header{
 
   background-color: $primary-bg-color;
   height: 10vh;
+  min-height: 3em;
+  width: 100vw;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -14,4 +16,31 @@ header{
     font-size: 2em;
   }
 
+  div:first-of-type{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    width: 40vw;
+  }
+
+  img[alt='logo']{
+
+    height: 100%;
+    object-fit: contain;
+  }
+
+}
+
+@media (max-width: 1250px){
+
+  header h1#title{
+    font-size: 1em;
+  }
+}
+
+@media (max-width: 700px){
+
+  header h1#title{
+    display: none;
+  }
 }
