--- a/PM-Movies/src/app/thumbnail-board/content-thumbnail/content-thumbnail.component.html
+++ b/PM-Movies/src/app/thumbnail-board/content-thumbnail/content-thumbnail.component.html
@@ -26,5 +26,5 @@
     </div>
   </div>
 
-  <div class="contentYear">{{content.releaseDate | date: 'yyyy'}}</div>
+  <div *ngIf="content.releaseDate.getFullYear() != 0801" class="contentYear">{{ content.releaseDate | date: 'yyyy'}}</div>
 </div>
