--- a/PM-Movies/src/app/thumbnail-board/thumbnail-board.component.scss
+++ b/PM-Movies/src/app/thumbnail-board/thumbnail-board.component.scss
@@ -3,11 +3,12 @@
 .filtersPan{
 
   left: 0;
-  margin-top: 5vh;
+  top: 2vh;
+  margin-top: 2vh;
   background-color: $primary-bg-color;
-  width: 5em;
-  height: 3em;
-  
+  width: 12em;
+  height: 4em;
+
   border-radius: 0 25px 25px 0;
   text-align: center;
   vertical-align: middle;
@@ -16,5 +17,20 @@
     margin-bottom: 0;
     padding-left: 1em;
     color: $primary-color;
+  }
+
+  &:hover{
+    cursor: pointer;
+  }
+
+  &.expanded{
+    width: 30vw;
+    border-radius: 0 25px 0 0;
+  }
+
+  img{
+    width: 2em;
+    height: 100%;
+    display: block;
   }
 }
