--- a/PM-Movies/src/app/thumbnail-board/content-filters-panel/content-filters-panel.component.scss
+++ b/PM-Movies/src/app/thumbnail-board/content-filters-panel/content-filters-panel.component.scss
@@ -1,1 +1,34 @@
 @import '../../../styles.scss';
+
+.filtersPanel{
+
+  width: 30vw;
+  height: 85%;
+  padding-left: 3em;
+  padding-right: 3em;
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
+
+  border: 1px $primary-bg-color solid;
+  border-radius: 0 0 25px 0;
+  box-shadow:  8px 11px 11px rgba(0,0,0, 0.2);
+
+
+  .contentTypes div{
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  }
+
+  section{
+
+    margin-bottom: 2em;
+
+    p{
+      border-bottom: 1px $primary-bg-color solid;
+    }
+  }
+}
+
+input[type=checkbox]:focus{
+  outline: none;
+  box-shadow: none;
+}
