--- a/PM-Movies/src/app/header/header.component.html
+++ b/PM-Movies/src/app/header/header.component.html
@@ -5,5 +5,5 @@
       The Perfect Movie
     </h1>
   </div>
-  <app-search-bar (queryUpdate)="onQueryUpdate($event)"></app-search-bar>
+  <app-search-bar></app-search-bar>
 </header>
