Added content detail

--- a/PM-Movies/src/app/header/header.component.html
+++ b/PM-Movies/src/app/header/header.component.html
@@ -1,9 +1,8 @@
 <header class="d-flex justify-content-between">
-  <div>
+
     <img src="/assets/logo.svg" alt="logo" class="px-4"/>
     <h1 id="title" class="m-4">
-      The Perfect Movie
+      <a routerLink="/">The Perfect Movie</a>
     </h1>
-  </div>
   <app-search-bar></app-search-bar>
 </header>
