--- a/PM-Movies/src/app/thumbnail-board/content-thumbnail/content-thumbnail.component.html
+++ b/PM-Movies/src/app/thumbnail-board/content-thumbnail/content-thumbnail.component.html
@@ -15,7 +15,7 @@
 
       <div class="actionBar d-flex justify-content-around">
         <img src="/assets/watchList.svg"/>
-        <p>More infos</p>
+        <a routerLink="/detail/{{content._type}}/{{content._tmdbId}}">More infos</a>
         <img src="/assets/watched.svg" alt="watched"/>
       </div>
 
