--- a/PM-Movies/src/styles.scss
+++ b/PM-Movies/src/styles.scss
@@ -1,11 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import './assets/css/variables';
 
 app-root{
   min-height: 100vh;
 }
-
-$primary-color : #FFB366;
-$primary-bg-color : #211D1D;
 
 @font-face {
     font-family: krungthep;
