--- a/PM-Movies/src/modules/thumbnail-board/components/content-detail/content-detail.component.html
+++ b/PM-Movies/src/modules/thumbnail-board/components/content-detail/content-detail.component.html
@@ -2,7 +2,7 @@
 
   <div class="card w-100">
 
-    <div class="contentDuration">
+    <div class="content-duration">
       <img src="/assets/clock.svg" alt="duration" />
       <p *ngIf="content.duration | minutesToHours as d; else nullDuration">{{ d }}</p>
       <ng-template #nullDuration><p i18n="@@content-detail.unknown">Unknown</p></ng-template>
@@ -11,7 +11,7 @@
 
     <div class="d-flex justify-content-start">
       <div class="image-top">
-        <img src="{{content.posterUrl}}" alt="Content poster unavailable">
+        <img src="{{content.posterUrl}}" alt="Content poster unavailable"/>
       </div>
 
       <div *ngIf="casts != undefined && director != undefined" class="m-auto">
@@ -39,12 +39,12 @@
 
     <div class="card-body">
 
-      <div class="contentTitle">
+      <div class="content-title">
         <p>{{content.title}}</p>
       </div>
 
     </div>
   </div>
 
-  <div *ngIf="content.releaseDate.getFullYear() != 0801" class="contentYear">{{ content.releaseDate | date: 'yyyy'}}</div>
+  <div *ngIf="content.releaseDate.getFullYear() != 0801" class="content-year">{{ content.releaseDate | date: 'yyyy'}}</div>
 </div>
