--- a/PM-Movies/src/modules/thumbnail-board/components/thumbnail-board/thumbnail-board.component.html
+++ b/PM-Movies/src/modules/thumbnail-board/components/thumbnail-board/thumbnail-board.component.html
@@ -1,12 +1,13 @@
 <div class="mx-auto d-flex justify-content-between">
   <div class="h-auto">
-    <div  (click)="toggleFiltersPane()" [class.expanded]="!filtersPaneHidden" class=" px-4 filtersPan d-flex justify-content-between align-items-center">
+    <div (click)="toggleFiltersPane()" [class.expanded]="!filtersPaneHidden" class=" px-4 filters-pan d-flex justify-content-between align-items-center">
       <img src="/assets/filter.svg" alt="" />
       <p>Filters</p>
-      <img *ngIf="!filtersPaneHidden" src="/assets/close.svg" alt="Close filter panel"/>
+      <img *ngIf="!filtersPaneHidden" src="/assets/close.svg" alt="Close filter panel" />
     </div>
 
-    <app-content-filters-panel (updateFilter)="onUpdateFilter($event)" [hidden]="filtersPaneHidden" ></app-content-filters-panel>
+    <app-content-filters-panel (updateFilter)="onUpdateFilter($event)" [hidden]="filtersPaneHidden">
+    </app-content-filters-panel>
   </div>
 
   <div class="d-flex flex-wrap justify-content-start w-100">
