--- a/PM-Movies/src/app/components/header/header.component.html
+++ b/PM-Movies/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="d-flex justify-content-between">
 
-    <img src="/assets/logo.svg" alt="logo" class="px-4"/>
+    <img routerLink="/" src="/assets/logo.svg" alt="logo" class="px-4"/>
     <h1 id="title" class="m-4">
       <a routerLink="/">The Perfect Movie</a>
     </h1>
