--- a/PM-Movies/src/app/components/content-thumbnail/content-thumbnail.component.html
+++ b/PM-Movies/src/app/components/content-thumbnail/content-thumbnail.component.html
@@ -2,25 +2,23 @@
   <div class="card">
 
     <div class="card-img-top">
-      <img src="{{content.posterUrl || ''}}" alt="Content poster unavailable"/>
+      <img src="{{content.posterUrl || ''}}" alt="Content poster unavailable" />
+      <div class="content-title w-100">
+        <p class="mr-auto">{{content.title}}</p>
+      </div>
     </div>
 
-    <div class="card-body">
+    <div class="card-body" routerLink="/detail/{{content.type}}/{{content.tmdbId}}">
+
+      <p>{{content.overview | slice:0:250}} ...</p>
 
       <div class="action-bar d-flex justify-content-around">
-        <img *ngIf="!content.toWatch" src="/assets/watchList.svg" (click)="addToWatchList()"/>
-        <div *ngIf="content.toWatch" (click)="removeFromWatchList()">To watch</div>
-        <a routerLink="/detail/{{content.type}}/{{content.tmdbId}}">More infos</a>
-        <img *ngIf="!content.watched" src="/assets/watched.svg" alt="watched" (click)="addToWatchedContents()"/>
-        <div *ngIf="content.watched" (click)="removeFromWatchedContents()">Seen</div>
-      </div>
-
-      <div class="content-title">
-        <p>{{content.title}}</p>
+        <button type="button" [class.btn-primary]="content.toWatch" [class.btn-outline-primary]="!content.toWatch"  class="btn" (click)="toggleWatchList($event)">A voir</button>
+        <button type="button" [class.btn-primary]="content.watched" [class.btn-outline-primary]="!content.watched" class="btn" (click)="addToWatchedContents($event)">Déja vu</button>
       </div>
 
     </div>
   </div>
 
-  <div *ngIf="content.releaseDate" class="content-year">{{ content.releaseDate | date: 'yyyy'}}</div>
+  <div *ngIf="content.releaseDate" class="content-year">Released on <span class="font-weight-bold"> {{ content.releaseDate | date: 'dd MMMM yyyy'}}</span></div>
 </div>
