--- a/PM-Movies/src/app/components/header/header.component.html
+++ b/PM-Movies/src/app/components/header/header.component.html
@@ -1,8 +1,10 @@
 <header class="d-flex justify-content-between">
-
-    <img routerLink="/" src="/assets/logo.svg" alt="logo" class="px-4"/>
-    <h1 id="title" class="m-4">
+  <div class="d-flex h-100">
+    <img routerLink="/" src="/assets/icons/logo.svg" alt="logo" class="px-4" />
+    <h1 id="title" class="my-auto">
       <a routerLink="/">The Perfect Movie</a>
     </h1>
+  </div>
+
   <app-search-bar></app-search-bar>
 </header>
