--- a/PM-Movies/src/app/components/search-bar/search-bar.component.html
+++ b/PM-Movies/src/app/components/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
 <div class="search-area px-4">
-  <input #searchQuery type="search" placeholder="Search" (input)="onSearchUpdate(searchQuery.value)" />
-  <img src="/assets/search.svg" alt="" />
+  <input #searchQuery type="search" placeholder="Search" (input)="onSearchUpdate(searchQuery.value)" class="w-100"/>
+  <img src="/assets/icons/search.svg" alt="" />
 </div>
