--- a/PM-Movies/src/app/components/content-filters-panel/content-filters-panel.component.html
+++ b/PM-Movies/src/app/components/content-filters-panel/content-filters-panel.component.html
@@ -1,30 +1,40 @@
 
-<div class="filtersPanel" *ngIf="!hidden">
+<div class="filters-panel" *ngIf="!hidden">
 
-  <section class="contentTypes">
-    <p>Content types</p>
+  <section class="content-types">
+    <p class="lead">Content types</p>
 
-    <div class="p-3 d-flex justify-content-between align-items-center">
+    <div class="py-3 d-flex justify-content-between align-items-center">
       <label for="movieCat">Movies</label>
-      <input type="checkbox" checked (click)="toggleShowMovies()" name="movieCat" class="form-control w-25">
+      <input type="checkbox" checked (click)="toggleShowMovies()" name="movieCat" class="form-control w-25"/>
     </div>
-    <div class="p-3 d-flex justify-content-between align-items-center">
+    <div class="py-3 d-flex justify-content-between align-items-center">
       <label for="tvCat">TV Shows</label>
-      <input type="checkbox" checked (click)="toggleShowTvShows()" name="tvCat" class="form-control w-25">
+      <input type="checkbox" checked (click)="toggleShowTvShows()" name="tvCat" class="form-control w-25"/>
     </div>
   </section>
 
   <section>
-    <p>Release date</p>
+    <p class="lead">Release date</p>
 
     <div class="d-flex flex-column">
-      <label for="gtReleaseDate">After</label>
-      <input id="gtReleaseDate" value="{{filter.gtReleaseDate}}" #gtDate (input)="updateGtDate(gtDate.value)" name="gtReleaseDate" type="date" class="form-control"/>
+      <label for="gt-release-date">After</label>
+      <div class="input-group">
+        <input id="gt-release-date" value="{{filter.gtReleaseDate}}" #gtDate (input)="updateGtDate(gtDate.value)" name="gt-release-date" type="date" class="form-control"/>
+        <div class="input-group-append">
+          <span class="input-group-text"><i class="far fa-calendar-alt"></i></span>
+        </div>
+      </div>
     </div>
 
     <div class="d-flex flex-column">
-      <label for="ltRealeaseDate">Before</label>
-      <input id="ltRealeaseDate" value="{{filter.ltReleaseDate}}" #ltDate (input)="updateLtDate(ltDate.value)" name="ltRealeaseDate" type="date" class="form-control"/>
+      <label for="lt-realease-date">Before</label>
+      <div class="input-group">
+        <input id="lt-realease-date" value="{{filter.ltReleaseDate}}" #ltDate (input)="updateLtDate(ltDate.value)" name="lt-realease-date" type="date" class="form-control"/>
+        <div class="input-group-append">
+          <span class="input-group-text"><i class="far fa-calendar-alt"></i></span>
+        </div>
+      </div>
     </div>
   </section>
 </div>
