--- a/PM-Movies/src/app/components/header/header.component.scss
+++ b/PM-Movies/src/app/components/header/header.component.scss
@@ -1,47 +1,14 @@
-@import '../../../assets/css/variables';
-
-header{
-
-  background-color: $primary-bg-color;
-  height: 10vh;
-  min-height: 3em;
-  width: 100vw;
+header {
+  position: fixed;
+  width: 100%;
+  height: 4rem;
+  min-height: 3rem;
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  z-index: 10;
 
-  #title a{
-    color : $primary-color;
-    font-family: krungthep;
-    // font-size: 2em;
-    text-decoration: none;
-  }
-
-  div:first-of-type{
-    height: 100%;
-    display: flex;
-    align-items: center;
-    width: 40vw;
-  }
-
-  img[alt='logo']{
-
-    height: 100%;
-    object-fit: contain;
-  }
-
-}
-
-@media (max-width: 1250px){
-
-  header h1#title{
-    font-size: 1em;
-  }
-}
-
-@media (max-width: 700px){
-
-  header h1#title{
-    display: none;
+  div{
+    width: 20rem;
   }
 }
