--- a/PM-Movies/src/app/components/search-bar/search-bar.component.scss
+++ b/PM-Movies/src/app/components/search-bar/search-bar.component.scss
@@ -1,29 +1,9 @@
-@import "../../../assets/css/variables";
-
 .search-area {
   position: relative;
 }
 
-.search-area img {
-  width: 1.2em;
-  position: absolute;
-  right: 3em;
-  top: 20%;
-}
-
-.search-area input {
-  border-radius: 25px;
-  border: none;
-  width: 40vw;
-  height: 5vh;
-  max-height: 2em;
-  min-height: 1.5em;
-  padding-left: 1em;
-  padding-right: 1em;
-
-  color: $primary-bg-color;
-
-  &:focus {
-    outline: none;
-  }
+input {
+  height: 13rem;
+  max-height: 2rem;
+  min-height: 1.5rem;
 }
