--- a/PM-Movies/src/app/components/thumbnail-board/thumbnail-board.component.scss
+++ b/PM-Movies/src/app/components/thumbnail-board/thumbnail-board.component.scss
@@ -1,35 +1,11 @@
-@import '../../../assets/css/variables';
+.filters-pan {
 
-.filters-pan{
-
-  left: 0;
-  top: 2vh;
-  margin-top: 2vh;
-  background-color: $primary-bg-color;
-  width: 10em;
-  height: 4em;
-
-  border-radius: 0 25px 25px 0;
-  text-align: center;
-  vertical-align: middle;
-
-  p{
-    margin-bottom: 0;
-    padding-left: 1em;
-    color: $primary-color;
-  }
-
-  &:hover{
+  &:hover {
     cursor: pointer;
   }
 
-  &.expanded{
-    width: 30vw;
-    border-radius: 0 25px 0 0;
-  }
-
-  img{
-    width: 2em;
+  img {
+    width: 2rem;
     height: 100%;
     display: block;
   }
