--- a/PM-Movies/src/styles.scss
+++ b/PM-Movies/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import './assets/css/variables';
+@import './assets/stylesheets/index';
 
 app-root{
   min-height: 100vh;
