--- a/PM-Movies/src/app/components/content-detail/content-detail.component.scss
+++ b/PM-Movies/src/app/components/content-detail/content-detail.component.scss
@@ -12,12 +12,9 @@
   text-align: center;
 }
 
-.content-duration {
-  height: 2.5rem;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
+.content-main-information {
   align-items: center;
+  display: flex;
 }
 
 .content-title {
